samples/errors/Cycle1.tmpl
scala: test.Cycle1
purs: Test.Cycle1

import Cycle2

type X: Int
